# local-ai-stack

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: chunking.py  extract.py  main.py  observability.py  ollama_client.py  rerank.py  schemas.py  sessions.py  vectorstore.py
backend/tests/: conftest.py  test_api.py  test_chunking.py  test_extract.py  test_observability.py  test_ollama_client.py  test_rerank.py  test_sessions.py  test_vectorstore.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.ts  useChat.ts
frontend/src/components/: ChatInput.tsx  DocumentContextField.tsx  DocumentUpload.tsx  MessageList.tsx  ModelPicker.tsx  SessionList.tsx  SystemPromptField.tsx
