[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the local AI stack streaming chat"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "chromadb==0.5.23",
    "python-multipart==0.0.9",
]
